# synapse-revamped

./: .env.example  .gitignore  README.md  apprules.json  package-lock.json
main-logic/: .env.example  .gitignore  Cargo.toml  apprules.json  blacklist.json
main-logic/src/: api.rs  apprules.rs  blacklist.rs  constants.rs  db.rs  error.rs  graceful_shutdown.rs  lib.rs  logger.rs  main.rs  metrics.rs  session.rs  spotify.rs  sync.rs  types.rs
main-logic/src/platform/: linux.rs  mod.rs  windows.rs
main-logic/tests/: integration.rs
src-tauri/: #.env.example#  .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
tmp/: package_backup.json
ui/: index.html  modal.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/public/themes/: theme-black.json  theme-blue.json  theme-green.json  theme-purple.json
ui/src/: AppRoutes.tsx  SynapseApp.jsx  index.css  main.tsx  modal.tsx  theme-loader.js
ui/src-tauri/: tauri.conf.json
ui/src/components/: AppBlockModal.tsx  FocusNotification.jsx  README.md  SynapseActions.jsx  SynapseStatisticsButton.jsx  ThemeSwitcher.jsx  WindowControls.tsx  accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  breadcrumb.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  (+8 more)
ui/src/hooks/: useAppBlockModal.ts  useFocusNotification.js  useSpotify.ts
ui/src/layouts/: SynapseHeader.jsx
ui/src/pages/: BlockWarningPage.tsx  StatisticsPage.tsx  SynapseApp.jsx  SynapseDailyGoal.jsx  (+3 more)
(+6 files in other folders)
