[package]
name = "main-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp"
] }
