[package]
name = "main-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
winreg = "0.11"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
thiserror = "1.0"
ctrlc = "3"
rusqlite = { version = "0.29", features = ["bundled"] }
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp"
] }
serde_with = "3.7"
uuid = { version = "1", features = ["v4", "serde"] }